--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
 				'记得给自己放松',
 				'每天都要元气满满',
 				'今天也要好好爱自己',
-				'适当休息一下'
+				'适当休息一下',
+				'宫子婷天天开心',
+				'宫子婷早点睡',
+				'宫子婷好好吃饭'
 			]
 
 			const colors = [
