--- a/index.html
+++ b/index.html
@@ -196,25 +196,22 @@
 		<script>
 			const board = document.getElementById('board')
 			const messages = [
-    '宫子婷保持好心情',
-    '宫子婷多喝水哦',
-    '宫子婷今天辛苦啦',
-    '宫子婷早点休息',
-    '宫子婷记得吃水果',
-    '宫子婷加油，你可以的',
-    '宫子婷祝你顺利',
-    '宫子婷保持微笑呀',
-    '宫子婷愿所有烦恼都消失',
-    '宫子婷期待下一次见面',
-    '宫子婷梦想总会实现',
-    '宫子婷天气冷了，多穿衣服',
-    '宫子婷记得给自己放松',
-    '宫子婷每天都要元气满满',
-    '宫子婷今天也要好好爱自己',
-    '宫子婷适当休息一下',
-    '宫子婷天天开心',
-    '宫子婷早点睡',
-    '宫子婷好好吃饭'
+    '保持好心情',
+    '多喝水哦',
+    '今天辛苦啦',
+    '早点休息',
+    '记得吃水果',
+    '加油，你可以的',
+    '祝你顺利',
+    '保持微笑呀',
+    '愿所有烦恼都消失',
+    '期待下一次见面',
+    '梦想总会实现',
+    '天气冷了，多穿衣服',
+    '记得给自己放松',
+    '每天都要元气满满',
+    '今天也要好好爱自己',
+    '适当休息一下'
 				]
 
 			const colors = [
